--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "from langchain.llms import GooglePalm\n",
     "\n",
-    "api_key = 'AIzaSyAOAALD1kHJqK2KRMWl73rivM__SEvQMzg'\n",
+    "api_key = ''\n",
     "\n",
     "llm = GooglePalm(google_api_key=api_key, temperature=0.2)"
    ]
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,10 +469,6 @@
     "     'SQLResult': \"Result of the SQL query\",\n",
     "     'Answer' : qns5\n",
     "     },\n",
-    "        {'Question' : \"How many t-shirts do we have left for Nike in XS size and white color?\",\n",
-    "     'SQLQuery' : \"SELECT sum(stock_quantity) FROM t_shirts WHERE brand = 'Nike' AND color = 'White' AND size = 'XS'\",\n",
-    "     'SQLResult': \"Result of the SQL query\",\n",
-    "     'Answer' : qns1}\n",
     "]"
    ]
   },
@@ -509,20 +505,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[dict_values(['How many t-shirts do we have left for Nike in XS size and white color?', \"SELECT sum(stock_quantity) FROM t_shirts WHERE brand = 'Nike' AND color = 'White' AND size = 'XS'\", 'Result of the SQL query', {'query': 'How many t-shirts do we have left for nike in extra small size and white color?', 'result': '35'}]),\n",
-       " dict_values(['How much is the total price of the inventory for all S-size t-shirts?', \"SELECT SUM(price*stock_quantity) FROM t_shirts WHERE size = 'S'\", 'Result of the SQL query', '14031']),\n",
+       "[dict_values(['How much is the total price of the inventory for all S-size t-shirts?', \"SELECT SUM(price*stock_quantity) FROM t_shirts WHERE size = 'S'\", 'Result of the SQL query', '14031']),\n",
        " dict_values(['If we have to sell all the Levi’s T-shirts today with discounts applied. How much revenue  our store will generate (post discounts)?', \"SELECT sum(a.total_amount * ((100-COALESCE(discounts.pct_discount,0))/100)) as total_revenue from\\n(select sum(price*stock_quantity) as total_amount, t_shirt_id from t_shirts where brand = 'Levi'\\ngroup by t_shirt_id) a left join discounts on a.t_shirt_id = discounts.t_shirt_id\\n \", 'Result of the SQL query', '24796.1']),\n",
        " dict_values(['If we have to sell all the Levi’s T-shirts today. How much revenue our store will generate without discount?', \"SELECT SUM(price * stock_quantity) FROM t_shirts WHERE brand = 'Levi'\", 'Result of the SQL query', '27740']),\n",
        " dict_values([\"How many white color Levi's shirt I have?\", \"SELECT sum(stock_quantity) FROM t_shirts WHERE brand = 'Levi' AND color = 'White'\", 'Result of the SQL query', '134'])]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,56 +528,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"How many t-shirts do we have left for Nike in XS size and white color? SELECT sum(stock_quantity) FROM t_shirts WHERE brand = 'Nike' AND color = 'White' AND size = 'XS' Result of the SQL query {'query': 'How many t-shirts do we have left for nike in extra small size and white color?', 'result': '35'}\",\n",
-       " \"How much is the total price of the inventory for all S-size t-shirts? SELECT SUM(price*stock_quantity) FROM t_shirts WHERE size = 'S' Result of the SQL query 14031\",\n",
+       "[\"How much is the total price of the inventory for all S-size t-shirts? SELECT SUM(price*stock_quantity) FROM t_shirts WHERE size = 'S' Result of the SQL query 14031\",\n",
        " \"If we have to sell all the Levi’s T-shirts today with discounts applied. How much revenue  our store will generate (post discounts)? SELECT sum(a.total_amount * ((100-COALESCE(discounts.pct_discount,0))/100)) as total_revenue from\\n(select sum(price*stock_quantity) as total_amount, t_shirt_id from t_shirts where brand = 'Levi'\\ngroup by t_shirt_id) a left join discounts on a.t_shirt_id = discounts.t_shirt_id\\n  Result of the SQL query 24796.1\",\n",
        " \"If we have to sell all the Levi’s T-shirts today. How much revenue our store will generate without discount? SELECT SUM(price * stock_quantity) FROM t_shirts WHERE brand = 'Levi' Result of the SQL query 27740\",\n",
        " \"How many white color Levi's shirt I have? SELECT sum(stock_quantity) FROM t_shirts WHERE brand = 'Levi' AND color = 'White' Result of the SQL query 134\"]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "to_vectorize = [\" \".join(map(str, example.values())) for example in few_shots]\n",
+    "to_vectorize = [\" \".join(example.values()) for example in few_shots]\n",
     "to_vectorize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Expected metadata value to be a str, int, float or bool, got {'query': 'How many t-shirts do we have left for nike in extra small size and white color?', 'result': '35'} which is a <class 'dict'>\n\nTry filtering complex metadata from the document using langchain.vectorstore.utils.filter_complex_metadata.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "File \u001b[0;32m~/Documents/Personal Education and Projects/ML Projects/Talking with database/Talking-with-a-database-LLM-project/venv/lib/python3.10/site-packages/langchain/vectorstores/chroma.py:208\u001b[0m, in \u001b[0;36mChroma.add_texts\u001b[0;34m(self, texts, metadatas, ids, **kwargs)\u001b[0m\n\u001b[1;32m    207\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 208\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_collection\u001b[39m.\u001b[39;49mupsert(\n\u001b[1;32m    209\u001b[0m         metadatas\u001b[39m=\u001b[39;49mmetadatas,\n\u001b[1;32m    210\u001b[0m         embeddings\u001b[39m=\u001b[39;49membeddings_with_metadatas,\n\u001b[1;32m    211\u001b[0m         documents\u001b[39m=\u001b[39;49mtexts_with_metadatas,\n\u001b[1;32m    212\u001b[0m         ids\u001b[39m=\u001b[39;49mids_with_metadata,\n\u001b[1;32m    213\u001b[0m     )\n\u001b[1;32m    214\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
-      "File \u001b[0;32m~/Documents/Personal Education and Projects/ML Projects/Talking with database/Talking-with-a-database-LLM-project/venv/lib/python3.10/site-packages/chromadb/api/models/Collection.py:295\u001b[0m, in \u001b[0;36mCollection.upsert\u001b[0;34m(self, ids, embeddings, metadatas, documents)\u001b[0m\n\u001b[1;32m    283\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Update the embeddings, metadatas or documents for provided ids, or create them if they don't exist.\u001b[39;00m\n\u001b[1;32m    284\u001b[0m \n\u001b[1;32m    285\u001b[0m \u001b[39mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    292\u001b[0m \u001b[39m    None\u001b[39;00m\n\u001b[1;32m    293\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m--> 295\u001b[0m ids, embeddings, metadatas, documents \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_embedding_set(\n\u001b[1;32m    296\u001b[0m     ids, embeddings, metadatas, documents\n\u001b[1;32m    297\u001b[0m )\n\u001b[1;32m    299\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_client\u001b[39m.\u001b[39m_upsert(\n\u001b[1;32m    300\u001b[0m     collection_id\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mid,\n\u001b[1;32m    301\u001b[0m     ids\u001b[39m=\u001b[39mids,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    304\u001b[0m     documents\u001b[39m=\u001b[39mdocuments,\n\u001b[1;32m    305\u001b[0m )\n",
-      "File \u001b[0;32m~/Documents/Personal Education and Projects/ML Projects/Talking with database/Talking-with-a-database-LLM-project/venv/lib/python3.10/site-packages/chromadb/api/models/Collection.py:354\u001b[0m, in \u001b[0;36mCollection._validate_embedding_set\u001b[0;34m(self, ids, embeddings, metadatas, documents, require_embeddings_or_documents)\u001b[0m\n\u001b[1;32m    348\u001b[0m embeddings \u001b[39m=\u001b[39m (\n\u001b[1;32m    349\u001b[0m     validate_embeddings(maybe_cast_one_to_many(embeddings))\n\u001b[1;32m    350\u001b[0m     \u001b[39mif\u001b[39;00m embeddings \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    351\u001b[0m     \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    352\u001b[0m )\n\u001b[1;32m    353\u001b[0m metadatas \u001b[39m=\u001b[39m (\n\u001b[0;32m--> 354\u001b[0m     validate_metadatas(maybe_cast_one_to_many(metadatas))\n\u001b[1;32m    355\u001b[0m     \u001b[39mif\u001b[39;00m metadatas \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    356\u001b[0m     \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    357\u001b[0m )\n\u001b[1;32m    358\u001b[0m documents \u001b[39m=\u001b[39m maybe_cast_one_to_many(documents) \u001b[39mif\u001b[39;00m documents \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/Personal Education and Projects/ML Projects/Talking with database/Talking-with-a-database-LLM-project/venv/lib/python3.10/site-packages/chromadb/api/types.py:191\u001b[0m, in \u001b[0;36mvalidate_metadatas\u001b[0;34m(metadatas)\u001b[0m\n\u001b[1;32m    190\u001b[0m \u001b[39mfor\u001b[39;00m metadata \u001b[39min\u001b[39;00m metadatas:\n\u001b[0;32m--> 191\u001b[0m     validate_metadata(metadata)\n\u001b[1;32m    192\u001b[0m \u001b[39mreturn\u001b[39;00m metadatas\n",
-      "File \u001b[0;32m~/Documents/Personal Education and Projects/ML Projects/Talking with database/Talking-with-a-database-LLM-project/venv/lib/python3.10/site-packages/chromadb/api/types.py:159\u001b[0m, in \u001b[0;36mvalidate_metadata\u001b[0;34m(metadata)\u001b[0m\n\u001b[1;32m    158\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(value, \u001b[39mbool\u001b[39m) \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(value, (\u001b[39mstr\u001b[39m, \u001b[39mint\u001b[39m, \u001b[39mfloat\u001b[39m)):\n\u001b[0;32m--> 159\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    160\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mExpected metadata value to be a str, int, float or bool, got \u001b[39m\u001b[39m{\u001b[39;00mvalue\u001b[39m}\u001b[39;00m\u001b[39m which is a \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(value)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    161\u001b[0m         )\n\u001b[1;32m    162\u001b[0m \u001b[39mreturn\u001b[39;00m metadata\n",
-      "\u001b[0;31mValueError\u001b[0m: Expected metadata value to be a str, int, float or bool, got {'query': 'How many t-shirts do we have left for nike in extra small size and white color?', 'result': '35'} which is a <class 'dict'>",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/rafeed/Documents/Personal Education and Projects/ML Projects/Talking with database/Talking-with-a-database-LLM-project/notebook.ipynb Cell 25\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/rafeed/Documents/Personal%20Education%20and%20Projects/ML%20Projects/Talking%20with%20database/Talking-with-a-database-LLM-project/notebook.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m vectorstore \u001b[39m=\u001b[39m Chroma\u001b[39m.\u001b[39;49mfrom_texts(to_vectorize, embeddings, metadatas\u001b[39m=\u001b[39;49mfew_shots)\n",
-      "File \u001b[0;32m~/Documents/Personal Education and Projects/ML Projects/Talking with database/Talking-with-a-database-LLM-project/venv/lib/python3.10/site-packages/langchain/vectorstores/chroma.py:576\u001b[0m, in \u001b[0;36mChroma.from_texts\u001b[0;34m(cls, texts, embedding, metadatas, ids, collection_name, persist_directory, client_settings, client, collection_metadata, **kwargs)\u001b[0m\n\u001b[1;32m    548\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Create a Chroma vectorstore from a raw documents.\u001b[39;00m\n\u001b[1;32m    549\u001b[0m \n\u001b[1;32m    550\u001b[0m \u001b[39mIf a persist_directory is specified, the collection will be persisted there.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    565\u001b[0m \u001b[39m    Chroma: Chroma vectorstore.\u001b[39;00m\n\u001b[1;32m    566\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    567\u001b[0m chroma_collection \u001b[39m=\u001b[39m \u001b[39mcls\u001b[39m(\n\u001b[1;32m    568\u001b[0m     collection_name\u001b[39m=\u001b[39mcollection_name,\n\u001b[1;32m    569\u001b[0m     embedding_function\u001b[39m=\u001b[39membedding,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    574\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[1;32m    575\u001b[0m )\n\u001b[0;32m--> 576\u001b[0m chroma_collection\u001b[39m.\u001b[39;49madd_texts(texts\u001b[39m=\u001b[39;49mtexts, metadatas\u001b[39m=\u001b[39;49mmetadatas, ids\u001b[39m=\u001b[39;49mids)\n\u001b[1;32m    577\u001b[0m \u001b[39mreturn\u001b[39;00m chroma_collection\n",
-      "File \u001b[0;32m~/Documents/Personal Education and Projects/ML Projects/Talking with database/Talking-with-a-database-LLM-project/venv/lib/python3.10/site-packages/langchain/vectorstores/chroma.py:220\u001b[0m, in \u001b[0;36mChroma.add_texts\u001b[0;34m(self, texts, metadatas, ids, **kwargs)\u001b[0m\n\u001b[1;32m    215\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mExpected metadata value to be\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m \u001b[39mstr\u001b[39m(e):\n\u001b[1;32m    216\u001b[0m     msg \u001b[39m=\u001b[39m (\n\u001b[1;32m    217\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mTry filtering complex metadata from the document using \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    218\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mlangchain.vectorstore.utils.filter_complex_metadata.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    219\u001b[0m     )\n\u001b[0;32m--> 220\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(e\u001b[39m.\u001b[39margs[\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m msg)\n\u001b[1;32m    221\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    222\u001b[0m     \u001b[39mraise\u001b[39;00m e\n",
-      "\u001b[0;31mValueError\u001b[0m: Expected metadata value to be a str, int, float or bool, got {'query': 'How many t-shirts do we have left for nike in extra small size and white color?', 'result': '35'} which is a <class 'dict'>\n\nTry filtering complex metadata from the document using langchain.vectorstore.utils.filter_complex_metadata."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vectorstore = Chroma.from_texts(to_vectorize, embeddings, metadatas=few_shots)"
    ]
